# industrial-data-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-ready-task.md
.github/workflows/: python-ci.yml
apps/edge_telemetry_agent/: AGENTS.md  README.md  pyproject.toml
apps/edge_telemetry_agent/config/: README.md
apps/edge_telemetry_agent/config/examples/: bootstrap.example.yaml  bootstrap.synthetic-emulator.yaml  config.bundle.example.yaml
apps/edge_telemetry_agent/docs/: data-contracts.md  mqtt-topics.md
apps/edge_telemetry_agent/src/edge_telemetry_agent/: __init__.py  __main__.py  cli.py  modeling.py
apps/edge_telemetry_agent/src/edge_telemetry_agent/application/: __init__.py  configuration.py  delivery.py  processing.py  southbound.py
apps/edge_telemetry_agent/src/edge_telemetry_agent/domain/: __init__.py  config.py  events.py
apps/edge_telemetry_agent/src/edge_telemetry_agent/infrastructure/: __init__.py  mqtt_contracts.py  mqtt_publisher.py  mqtt_retained_config.py  sqlite_outbox.py  sqlite_point_state.py
apps/edge_telemetry_agent/tests/: test_cli.py  test_configuration.py  test_delivery.py  test_knx_source_emulator_adapter.py  test_mqtt_publisher.py  test_processing.py  test_sqlite_outbox.py  test_sqlite_point_state.py
apps/idp_asset_graph_registry/: AGENTS.md  README.md  pyproject.toml
apps/idp_asset_graph_registry/migrations/: env.py
apps/idp_asset_graph_registry/migrations/versions/: 0001_asset_graph_registry_baseline.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/: __init__.py  __main__.py  main.py  settings.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/api/: __init__.py  dependencies.py  schemas.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/api/routers/: __init__.py  asset_graph.py  catalog.py  health.py  vocabulary.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/application/: __init__.py  errors.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/application/ports/: registry_lookup.py  unit_of_work.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/application/use_cases/: asset_graph.py  catalog.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/domain/: __init__.py  entities.py  value_objects.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/infrastructure/: __init__.py  registry_lookup.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/infrastructure/memory/: __init__.py  unit_of_work.py
apps/idp_asset_graph_registry/src/idp_asset_graph_registry/infrastructure/postgres/: __init__.py  database.py  models.py  unit_of_work.py
apps/idp_asset_graph_registry/tests/: test_api.py  test_postgres_models.py
apps/idp_config_registry/: AGENTS.md  README.md  alembic.ini  pyproject.toml
apps/knx_demo/: README.md  pyproject.toml
apps/knx_demo/src/knx_demo/: __init__.py  __main__.py
apps/knx_demo/src/knx_demo/application/: __init__.py  blink_melody.py  ports.py  read_signals.py
apps/knx_demo/src/knx_demo/cli/: __init__.py  blink_melody.py  common.py  read_signals.py
apps/knx_demo/src/knx_demo/domain/: __init__.py  blink.py  profiles.py  telemetry.py
apps/knx_demo/src/knx_demo/infrastructure/: __init__.py  console.py  xknx.py
apps/knx_demo/tests/: test_blink_melody.py  test_cli.py  test_profiles.py  test_read_signals.py
apps/knx_source_emulator/: README.md  pyproject.toml
apps/knx_source_emulator/src/knx_source_emulator/: __init__.py  cli.py  plan.py  protocol.py  server.py  values.py
apps/knx_source_emulator/tests/: test_cli.py  test_plan.py  test_protocol.py  test_static_imports.py  test_tcp_server.py  test_values.py
apps/wm_config_registry/: AGENTS.md  README.md  pyproject.toml
apps/wm_config_registry/src/wm_config_registry/: main.py
apps/wm_edge_agent/: AGENTS.md
arch/: AGENTS.md  README.md  likec4.config.json
arch/likec4/: actors.c4  model.c4  specification.c4  views.c4
docs/: future-ideas.md
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
docs/agents/: README.md  module-map.yaml
docs/architecture/: AGENTS.md  README.md  clickhouse-analytics-readiness.md  current-state.md  decisions.md  github-organization-migration.md  glossary.md  hierarchical-catalog-v1.md  knx-demo-stand-connection.md  knx-opc-ua-bridge-analysis.md  likec4-github-pages.md  open-questions.md  read-only-telemetry-api-discussion.md  solution-architecture.md
docs/contracts/: AGENTS.md  README.md
environments/demo-stand/: README.md
environments/demo-stand-remote/: README.md
infra/local/: AGENTS.md  README.md  compose.yaml  emulator-runbook.md  up-platform.sh
libs/idp_demo_stack/: README.md  pyproject.toml
libs/idp_demo_stack/src/idp_demo_stack/: __init__.py  bundle.py  cli.py  config_registry_client.py  kafka_publisher.py  models.py  publisher.py  retained_config.py  runtime.py  scenario.py
libs/idp_demo_stack/tests/: conftest.py  test_scenario.py
libs/idp_synthetic_config/: README.md  pyproject.toml
libs/idp_synthetic_config/src/idp_synthetic_config/: __init__.py  cli.py  config_registry_seeder.py  generator.py  models.py  reset.py
libs/idp_synthetic_config/tests/: test_cli.py  test_contract_payloads.py  test_generator.py  test_reset.py  test_seeder.py  test_static_imports.py
libs/knx_project_parser/: README.md  pyproject.toml
libs/knx_project_parser/src/knx_project_parser/: __init__.py  cli.py  models.py  parser.py
libs/knx_project_parser/tests/: conftest.py  test_parser.py
libs/wm_demo_stack/: README.md
tests/integration/: conftest.py  test_asset_graph_registry_postgres.py  test_config_registry_backoffice_ui.py  test_config_registry_kafka_publisher.py  test_config_registry_postgres.py  test_edge_agent_knx_to_mqtt.py  test_edge_agent_mqtt_publisher.py  test_grafana_clickhouse.py  test_kafka_to_clickhouse_storage.py
tools/idp_telemetry_store/: AGENTS.md  README.md  pyproject.toml
tools/wm_clickhouse_migrations/: AGENTS.md  README.md  pyproject.toml
(+220 files in other folders)
