[project]
name = "web-monitoring"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "wm-edge-agent",
    "wm-knx-demo",
    "wm-config-registry",
    "wm-knx-parser",
    "wm-demo-stack",
    "wm-clickhouse",
]

[dependency-groups]
integration = [
    "paho-mqtt>=2.1.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]
lint = [
    "ruff>=0.15.8",
]
coverage = [
    "coverage[toml]>=7.13.5",
    "genbadge[coverage]>=1.1.3",
]

[tool.uv]
package = false

[tool.uv.sources]
wm-edge-agent = { workspace = true }
wm-knx-demo = { workspace = true }
wm-config-registry = { workspace = true }
wm-knx-parser = { workspace = true }
wm-demo-stack = { workspace = true }
wm-clickhouse = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
    "tools/*",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: end-to-end checks for dockerized local infrastructure",
    "integration_smoke: fast smoke subset of dockerized integration checks",
    "integration_storage: Kafka to ClickHouse storage integration checks",
    "integration_config_delivery: Config Registry to Kafka/MQTT delivery checks",
    "integration_grafana: Grafana and ClickHouse dashboard integration checks",
    "integration_data_platform: Industrial Data Platform integration checks",
    "integration_web_monitoring: Web Monitoring Module integration checks",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = [
    "apps/wm_edge_agent/src",
    "apps/wm_knx_demo/src",
    "apps/wm_config_registry/src",
    "libs/wm_knx_parser/src",
    "libs/wm_demo_stack/src",
    "tools/wm_clickhouse_migrations/src",
    "tests",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "apps/wm_edge_agent/src/wm_edge_agent",
    "apps/wm_knx_demo/src/wm_knx_demo",
    "apps/wm_config_registry/src/wm_config_registry",
    "libs/wm_knx_parser/src/wm_knx_parser",
    "libs/wm_demo_stack/src/wm_demo_stack",
    "tools/wm_clickhouse_migrations/src/wm_clickhouse",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
