[project]
name = "industrial-data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "edge-telemetry-agent",
    "knx-demo",
    "idp-config-registry",
    "knx-project-parser",
    "idp-demo-stack",
    "idp-synthetic-config",
    "idp-telemetry-store",
]

[dependency-groups]
integration = [
    "paho-mqtt>=2.1.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]
lint = [
    "ruff>=0.15.8",
]
coverage = [
    "coverage[toml]>=7.13.5",
    "genbadge[coverage]>=1.1.3",
]

[tool.uv]
package = false

[tool.uv.sources]
edge-telemetry-agent = { workspace = true }
knx-demo = { workspace = true }
idp-config-registry = { workspace = true }
knx-project-parser = { workspace = true }
idp-demo-stack = { workspace = true }
idp-synthetic-config = { workspace = true }
idp-telemetry-store = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
    "tools/*",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: end-to-end checks for dockerized local infrastructure",
    "integration_smoke: fast smoke subset of dockerized integration checks",
    "integration_storage: Kafka to ClickHouse storage integration checks",
    "integration_config_delivery: Config Registry to Kafka/MQTT delivery checks",
    "integration_grafana: Grafana and ClickHouse dashboard integration checks",
    "integration_data_platform: Industrial Data Platform integration checks",
    "integration_web_monitoring: Web Monitoring Module integration checks",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = [
    "apps/edge_telemetry_agent/src",
    "apps/knx_demo/src",
    "apps/idp_config_registry/src",
    "libs/knx_project_parser/src",
    "libs/idp_demo_stack/src",
    "libs/idp_synthetic_config/src",
    "tools/idp_telemetry_store/src",
    "tests",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "apps/edge_telemetry_agent/src/edge_telemetry_agent",
    "apps/knx_demo/src/knx_demo",
    "apps/idp_config_registry/src/idp_config_registry",
    "libs/knx_project_parser/src/knx_project_parser",
    "libs/idp_demo_stack/src/idp_demo_stack",
    "libs/idp_synthetic_config/src/idp_synthetic_config",
    "tools/idp_telemetry_store/src/idp_telemetry_store",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
