[project]
name = "edge-telemetry-agent"
version = "0.1.0"
description = "Core runtime for the industrial edge telemetry agent"
readme = "README.md"
authors = [
    { name = "srgi0", email = "dss181@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
edge-telemetry-agent = "edge_telemetry_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
