[project]
name = "knx-demo"
version = "0.1.0"
description = "KNX demo tooling for reading group values and blinking demo rhythms"
readme = "README.md"
authors = [
    { name = "srgi0", email = "dss181@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "xknx>=3.15.0",
]

[project.scripts]
knx-demo = "knx_demo.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
