[project]
name = "idp-demo-stack"
version = "0.1.0"
description = "Reusable demo MQTT retained-config and telemetry helpers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka==2.14.0",
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
publish-edge-demo = "idp_demo_stack.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
