[project]
name = "wm-clickhouse"
version = "0.1.0"
description = "ClickHouse migration tooling for the Industrial Data Platform Telemetry Store"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
wm-clickhouse = "wm_clickhouse.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
